add task last time api
